Bug 1940653 - Make `HTMLEditor::HandlerInsertText` insert one `Text` when linefeeds are preformatted r=m_kato

The form of <https://discussions.apple.com/> handles newly inserted `Text` nodes
asynchronously after pasted.  Then, the text will be wrapped into `<p>`
elements.  However, the handler does not assume that multiple and consecutive
`Text` nodes are inserted by a pasting.  Therefore, they fail handling our
pasted text which was split to each line and each preformatted linefeed.

Chrome puts only one `Text` node at pasting multiline plaintext and following
this behavior fixes the issue in the form.  Therefore, we should follow the
behavior at least for now.

Differential Revision: https://phabricator.services.mozilla.com/D233619